welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: Missing closing brace `}' assumed here
var dance=false//passe en true quand la danse s'arrete (passage sur une case vide)
^